ingress-files/ingress-svc-lms.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lms-ingress-svc
  namespace: dl-lms-ramesh
spec:
  rules:
    - host: lms.sayerameshbabu.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: lms-frontend-cluster-svc
              servicePort: 8091
    - host: lms-api.sayerameshbabu.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: lms-backend-cluster-svc
              servicePort: 3000
